--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,7 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# Pyre type checkercategory = ProductCategorySerializer()
 .pyre/
 
 # pytype static type analyzer
@@ -158,3 +158,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+ media
+ .idea
